--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "yarn": "^1.22.17",
+    "node": "16.13.2"
   }
 }
