--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "npm": "8.1.2",
+    "yarn": "1.22.17",
+    "node": "16.13.2"
   }
 }
